PROJECT(statismo_ITK)
FIND_PACKAGE(WrapITK REQUIRED)

FIND_PATH(STATISMO_DIR STATISMO REQUIRED)
include(${STATISMO_DIR}/statismo-config.cmake)


SET(CMAKE_VERBOSE_MAKEFILE ON)

IF (WIN32)
	SET(HDF5_LIBRARIES hdf5dll.lib hdf5_cppdll.lib zlib1.lib szip.lib)   
	ADD_DEFINITIONS(-D_HDF5USEDLL_ -DHDF5CPP_USEDLL)
ELSE()
	SET(HDF5_LIBRARIES hdf5 hdf5_cpp z)
ENDIF()


SET(PROJECT_SOURCE_DIR ${STATISMO_DIR} ${STATISMO_DIR}/statismo_ITK)

include_directories(${STATISMO_DIR} ${STATISMO_DIR}/statismo_ITK  ${STATISMO_INCLUDE_DIR}  ${ITK_INCLUDE_DIRS}  ${STATISMO_DIR}/Representers/ITK)
link_directories(${ITK_LIBRARY_DIRS} ${HDF5_LIBRARY_DIR})


BEGIN_WRAPPER_LIBRARY("statismo_ITK")

SET(WRAPPER_LIBRARY_DEPENDS 
  Base 
  Numerics
  Transforms 
  SpatialObject
  VXLNumerics
  IO
)

SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKNumerics ${HDF5_LIBRARIES})

cmake_minimum_required(VERSION 2.6)

IF(WIN32)
  INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )
  SET(WRAPPER_DEFAULT_INCLUDE "itkMultiThreaderStub.h" ${WRAPPER_DEFAULT_INCLUDE})
ENDIF(WIN32)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

