PROJECT(statismo_ITK)
FIND_PACKAGE(WrapITK REQUIRED)

FIND_PACKAGE(STATISMO REQUIRED)

SET(CMAKE_VERBOSE_MAKEFILE ON)


SET(PROJECT_SOURCE_DIR ${STATISMO_ROOT_DIR} ${STATISMO_ROOT_DIR}/statismo_ITK)

include_directories(${STATISMO_ROOT_DIR} ${STATISMO_ROOT_DIR}/statismo_ITK  ${STATISMO_ROOT_DIR}/3rdParty  ${STATISMO_INCLUDE_DIR}  ${ITK_INCLUDE_DIRS}  ${STATISMO_ROOT_DIR}/Representers/ITK)
link_directories(${ITK_LIBRARY_DIRS} ${STATISMO_LIBRARY_DIR})


BEGIN_WRAPPER_LIBRARY("statismo_ITK")

SET(WRAPPER_LIBRARY_DEPENDS 
  Base 
  Numerics
  Transforms 
  SpatialObject
  VXLNumerics
  IO
)

SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon ITKNumerics ${STATISMO_LIBRARIES})

cmake_minimum_required(VERSION 2.6)

IF(WIN32)
  INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )
  SET(WRAPPER_DEFAULT_INCLUDE "itkMultiThreaderStub.h" ${WRAPPER_DEFAULT_INCLUDE})
ENDIF(WIN32)

WRAPPER_LIBRARY_CREATE_WRAP_FILES()
WRAPPER_LIBRARY_CREATE_LIBRARY()

