cmake_minimum_required (VERSION 2.6)

SET(CMAKE_VERBOSE_MAKEFILE ON)

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

FIND_PACKAGE(VTK REQUIRED)
include (${VTK_USE_FILE})


set (VTK_LIBRARIES_PYTHON
        vtkCommonPythonD
        vtkPythonCore
        )

include_directories(${STATISMO_ROOT_DIR} ${STATISMO_INCLUDE_DIR} ${STATISMO_ROOT_DIR}/3rdParty 
					${VTK_INCLUDE_DIR}  ${STATISMO_ROOT_DIR}/Representers/VTK ${STATISMO_ROOT_DIR}/Representers
						${HDF5_INCLUDE_DIR} ${HDF5_INCLUDE_DIR_CPP})
						
link_directories (${STATISMO_LIBRARY_DIR} ${HDF5_LIBRARY_DIR})   


FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(statismo.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(statismo.i PROPERTIES SWIG_FLAGS "-includeall")

SWIG_ADD_MODULE(statismo python statismo.i  )
ADD_DEPENDENCIES(_statismo HDF5)
SWIG_LINK_LIBRARIES(statismo ${PYTHON_LIBRARIES}  ${STATISMO_LIBRARIES} ${VTK_LIBRARIES} ${VTK_LIBRARIES_PYTHON} ${HDF5_LIBRARIES})

INSTALL(TARGETS _statismo  LIBRARY DESTINATION lib/Python)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/statismo.py DESTINATION lib/Python)